--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ jobs:
 install: pip3 install --upgrade pip # all three OSes agree about 'pip3'
 # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
 # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
-script: py my_app.py || python3 my_app.py
+script: py my_app.py
